Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125550

Incorrect interpretation of index 255 color in QCustom3DVolume's colorTable

XMLWordPrintable

    • Linux/X11, macOS
    • 2f7b8fb65 (dev), ecf02bed2 (6.8), 32926ce27 (6.7)

      When creating a custom volume whose colors are in 8-bit indexed format, index 255 of the color table is misinterpreted. In this example, I'm creating a simple cube whose colors go from blue to green to red for an index of 0 to 254. Finally, the color of index 255 should be yellow, but it appears blue. In other cases, I have no display for index 255.

        1. CMakeLists.txt
          1 kB
        2. Main.qml
          0.3 kB
        3. customvolume.cpp
          1 kB
        4. customvolume.h
          0.3 kB
        5. main.cpp
          0.5 kB
        6. Screenshot from 2024-05-22 09-27-46.png
          Screenshot from 2024-05-22 09-27-46.png
          61 kB
        For Gerrit Dashboard: QTBUG-125550
        # Subject Branch Project Status CR V

            amr_essam Amr Elsayed (Inactive)
            krenouj Croa lagrenouille
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes