Fix QCustom3DVolume tiling issue

Fixes: QTBUG-125550
Change-Id: I8ca244c5ec5fdf770ca450595e113374eff3ab39
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 2f7b8fb6529225a06f506da40a86ce43003830d2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ecf02bed2fc5e691aa4c0d335bf3b77d5f46a139)